--- a/2주차_HTML&CSS기초/style.css
+++ b/2주차_HTML&CSS기초/style.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
+*{
+    font-family: 'Quicksand', sans-serif;
+}
 body, h1, h2{
     margin:px;
     padding: 0px;
